--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -113,11 +113,16 @@ environments:
   development:
     dataSource:
       dbCreate: create-drop
-      url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+      url: jdbc:postgresql://localhost:5432/exercice
+      driverClassName: org.postgresql.Driver
+      username: postgres
+      password:
+      #url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
   test:
     dataSource:
       dbCreate: update
       url: jdbc:h2:mem:testDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+
   production:
     dataSource:
       dbCreate: none
