--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -125,7 +125,7 @@ environments:
 
   production:
     dataSource:
-      dbCreate: none
+      dbCreate: create-drop
       url: jdbc:h2:./prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
       properties:
         jmxEnabled: true
